--- a/src/app/application/templates/base.html
+++ b/src/app/application/templates/base.html
@@ -33,6 +33,7 @@
           <a class="nav-item nav-link" id="home" href="/">Home</a>
           <a class="nav-item nav-link" id="pharma" href="/pharma">Pharmacies</a>
           <a class="nav-item nav-link" id="notify" href="/notify">Notify</a>
+          <a class="nav-item nav-link" id="polls" href="/polls">Polls</a>
           <a class="nav-item nav-link" id="bonus" href="/bonus">Bonus</a>
           <a class="nav-item nav-link" id="feedback" href="/feedback">Feedback</a>
           <a class="nav-item nav-link" id="settings" href="/settings">Settings</a>
