--- a/src/app/application/templates/settings/settings.html
+++ b/src/app/application/templates/settings/settings.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %} {% block title %}Map{% endblock %} {% block content %}
 <div class="container">
-  <h2>Настройки</h2>
+  <!-- <h2>Настройки</h2> -->
   <form method="POST">
-    <h3 align="center">Login</h3>
+    <h3 align="center">Настройки</h3>
     <div class="form-group">
       <label for="phone">Изменить телефон</label>
       <input
