--- a/src/app/application/templates/bonus.html
+++ b/src/app/application/templates/bonus.html
@@ -1,13 +1,20 @@
 {% extends "base.html" %} {% block title %}Map{% endblock %} 
 {% block content %}
-{% if balance.client.bonuses %}
 <div class="container">
   <br>
-  <p>Номер карты: {{ balance.client.card }}</p>
-  <p>Количество бонусов = {{ balance.client.bonuses }}</p>
-  <p>{{ balance.bonuses[0].expireAt[:10] }} сгорит {{ balance.bonuses[0].amount }} бонусов</p>
+  <p>{{ balance }}</p>
+  {% if balance.client.card %}
+    <p>Номер карты: {{ balance.client.card }}</p>
+  {% else %}
+    <p>Вы ещё не зафиксировали бонусную карту в системе лояльности</p>
+  {% endif %}
+  {% if balance.client.bonuses %}
+    <p>Количество бонусов = {{ balance.client.bonuses }}</p>
+  {% else %}
+    <p>Количество бонусов = 0</p>
+  {% endif %}
+  {% for i in range(count - 1) %}
+    <p>{{ balance.bonuses[i].expireAt[:10] }} сгорит {{ balance.bonuses[i].amount }} бонусов</p>
+  {% endfor %}
 </div>
-{% else %}
-  <p>Количество бонусов = 0</p>
-{% endif %}
 {% endblock %}
