--- a/src/app/application/templates/bonus.html
+++ b/src/app/application/templates/bonus.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %} {% block title %}Map{% endblock %} 
 {% block content %}
+  <div class="container" style="background-image: url('../static/img/');">
+  <!-- <img src="../static/img/bonucback.sv" alt="Привет ребята"> -->
   <br>
   <p>{{ balance }}</p>
   {% if balance.client.card %}
@@ -15,4 +17,5 @@
   {% for i in range(count - 1) %}
     <p>{{ balance.bonuses[i].expireAt[:10] }} сгорит {{ balance.bonuses[i].amount }} бонусов</p>
   {% endfor %}
+  </div>
 {% endblock %}
