--- a/src/app/application/templates/map.html
+++ b/src/app/application/templates/map.html
@@ -17,7 +17,7 @@
 
 {% extends "base.html" %} {% block title %}Map{% endblock %} {% block content %}
   <link rel="stylesheet" href="static/css/style.css">
-  <div id="map-test" class="map"></div>
+  <div id="map-test" class="map" style="margin-left: 100px"></div>
 	<script src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&lang=ru_RU">
 	</script>
 	<script src="static/js/script.js"></script>
